deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialserver
  namespace: "default"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: socialserver
  template:
    metadata:
      labels:
        app: socialserver
        version: v1
    spec:
      containers:
        - name: socialserver
          image: mike-virtual-machine1:5000/socialserver:v1.6
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialserver-v2
  namespace: "default"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: socialserver
  template:
    metadata:
      labels:
        app: socialserver
        version: v2
    spec:
      containers:
        - name: socialserver
          image: mike-virtual-machine1:5000/socialserver:v1.6
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60

---
apiVersion: v1
kind: Service
metadata:
  name: socialserver
  annotations:
    konghq.com/plugins: ""
#    konghq.com/plugins: rate-limiting-example, proxy-cache-example, upstream-timeout-example
spec:
  selector:
    app: socialserver
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social.service.cn
  namespace: "default"
spec:
  #  ingressClassName: nginx
  ingressClassName: kong
  rules:
    - host: social.service.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socialserver
                port:
                  number: 80
